fix(Responsive): Change position of prev/next button on small screens

--- a/assets/styles/_sass/_about.scss
+++ b/assets/styles/_sass/_about.scss
@@ -43,6 +43,16 @@ html, body {
       margin-left: 22px;
     }
 
+    @media (max-width: 460px) {
+      a[data-move="-1"] {
+        margin-left: 12px;
+      }
+
+      a[data-move="1"] {
+        margin-right: 12px;
+      }
+    }
+
     &[data-position="0"] a[data-move="-1"], &[data-position="5"] a[data-move="1"] {
       opacity: 0.3;
     }
